# hpke-http

./: .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml  vulture_whitelist.py
.github/workflows/: release.yml  sbom.yml  test.yml
src/hpke_http/: __init__.py  constants.py  core.py  envelope.py  exceptions.py  headers.py  hpke.py  streaming.py
src/hpke_http/middleware/: aiohttp.py  fastapi.py  httpx.py
src/hpke_http/primitives/: aead.py  kem.py
tests/: conftest.py  e2e_server.py  test_base_client.py  test_encoding_negotiation.py  test_fuzz.py  test_malformed_requests.py  test_middleware.py  test_psk_id_header.py
tests/unit/: test_aiohttp_client.py  test_api_types.py  test_compression.py  test_core.py  test_envelope.py  test_fastapi_middleware.py  test_hpke.py  test_memory.py  test_performance.py  test_response_encryption.py  test_sse_format.py  test_sse_whatwg.py  test_streaming.py  test_streaming_errors.py
tests/vectors/: rfc9180_psk_x25519_chacha.json  test_rfc5869_hkdf.py  test_rfc7748_x25519.py  test_rfc8439_chacha20_poly1305.py  test_rfc9180_vectors.py  test_wycheproof_chacha20_poly1305.py  test_wycheproof_hkdf_sha256.py  test_wycheproof_hmac_sha256.py  test_wycheproof_x25519.py
